# GPUI-Multi-Page-Ai-Terminal

./: .gitignore  Cargo.toml  README.md  demo.sh  test.sh
src/: app.rs  main.rs
src/ai/: assistant.rs  completion.rs  mod.rs
src/terminal/: emulator.rs  mod.rs  pty.rs  tab.rs
src/ui/: mod.rs
