[package]
name = "gpui-multi-page-ai-terminal"
version = "0.1.0"
edition = "2021"
description = "A Zed-like terminal with AI features"
authors = ["Alessandro Bruno H <alessandrobrunoh@example.com>"]
license = "MIT"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
crossterm = "0.27"
tui = "0.19"
ratatui = "0.23"
chrono = "0.4"