[package]
name = "gpui-multi-page-ai-terminal"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.28"
egui = "0.28"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }
portable-pty = "0.8"
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
crossbeam-channel = "0.5"
